@@ -164,6 +164,14 @@ Fortune(){
 ################################
 
 ################################
+#	DeskPi
+################################
+DeskPi(){
+	/home/pi/pi-scripts/DeskPi.sh 
+}
+################################
+
+################################
 #	Proto
 ################################
 Proto(){
